Comments incorporated for Beta Release

--- a/footer_pbsworks.htm
+++ b/footer_pbsworks.htm
@@ -7,5 +7,16 @@
             <p>© 2022 Altair Engineering, Inc. All Rights Reserved.</p>
             <p><a href="${oxygen-webhelp-output-dir}/front_matter/intellectual_property_rights_notice_pbsworks_r.htm" onclick="window.open(this.href, 'windowOpenTab', 'scrollbars=1,resizable=1,width=740,height=500,left=0,top=0'); return false;">Intellectual Property Rights Notice</a>  |  <a href="${oxygen-webhelp-output-dir}/front_matter/technical_support_pbsworks_r.htm" onclick="window.open(this.href, 'windowOpenTab', 'scrollbars=1,resizable=1,width=740,height=500,left=0,top=0'); return false;">Technical Support</a>  |  <a onclick="UC_UI.showSecondLayer();">Cookie Consent</a></p>   
         </div>
+
+
+		<!-- Generates the dark theme slider -->
+		
+		<label class="darkModeToggle">
+			<span class="onoff"></span>
+				<input type="checkbox" id="toggleState" />
+			<span class="slider round"></span>
+		</label>		
+		
+		
     </body>
 </html>
