Minor update in Install Object Store topic

--- a/output/topics/configuration/content_definition_t.htm
+++ b/output/topics/configuration/content_definition_t.htm
@@ -3,7 +3,7 @@
   PUBLIC "" "about:legacy-compat">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:whc="http://www.oxygenxml.com/webhelp/components" xml:lang="en-us" lang="en-us">
     <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><link rel="shortcut icon" href="../../iconAltair-32.png"><!----></link><link rel="icon" href="../../iconAltair-32.png"><!----></link>        
-      <meta name="copyright" content="(C) Copyright 2023" /><meta name="DC.rights.owner" content="(C) Copyright 2023" /><meta name="DC.Type" content="task" /><meta name="DC.Title" content="Create Content Definition" /><meta name="abstract" content="Create the content definition in the local packs." /><meta name="description" content="Create the content definition in the local packs." /><meta name="DC.Relation" scheme="URI" content="../../topics/configuration/object_store_configuration_t.htm" /><meta name="DC.Relation" scheme="URI" content="../../topics/configuration/local_packs_create_t.htm" /><meta name="DC.Relation" scheme="URI" content="../../topics/configuration/property_create_t.htm" /><meta name="prodname" content="Getting Started with Altair Object Store" /><meta name="version" content="2022.1.0" /><meta name="DC.Format" content="XHTML" /><meta name="DC.Identifier" content="task_arr_4vb_55b" /><title>Create Content Definition</title><!--  Generated with Oxygen version 20.0-SNAPSHOT, build number 2018042310.  --><meta name="wh-path2root" content="../../" /><meta name="wh-toc-id" content="task_arr_4vb_55b-d46e651" />
+      <meta name="copyright" content="(C) Copyright 2024" /><meta name="DC.rights.owner" content="(C) Copyright 2024" /><meta name="DC.Type" content="task" /><meta name="DC.Title" content="Create Content Definition" /><meta name="abstract" content="Create the content definition in the local packs." /><meta name="description" content="Create the content definition in the local packs." /><meta name="DC.Relation" scheme="URI" content="../../topics/configuration/object_store_configuration_t.htm" /><meta name="DC.Relation" scheme="URI" content="../../topics/configuration/local_packs_create_t.htm" /><meta name="DC.Relation" scheme="URI" content="../../topics/configuration/property_create_t.htm" /><meta name="prodname" content="Getting Started with Altair Object Store" /><meta name="version" content="2022.1.0" /><meta name="DC.Format" content="XHTML" /><meta name="DC.Identifier" content="task_arr_4vb_55b" /><title>Create Content Definition</title><!--  Generated with Oxygen version 20.0-SNAPSHOT, build number 2018042310.  --><meta name="wh-path2root" content="../../" /><meta name="wh-toc-id" content="task_arr_4vb_55b-d46e651" />
     	<!--ZOOMSTOP-->
         <link rel="preload" href="../../oxygen-webhelp/template/resources/images/unity_gradient_resized.png" as="image" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -50,7 +50,7 @@
         <!--ZOOMRESTART-->
     </head>
 
-    <body class="wh_topic_page dita_topic frmBody" id="task_arr_4vb_55b" data-spy="scroll" data-target="#toc">
+    <body class="wh_topic_page dita_topic frmBody" id="task_arr_4vb_55b" data-target="#toc" data-spy="scroll">
         <!-- Sets the current theme (light/dark) based on local storage. The script is placed here rather than
             at the end of the body tag with the rest of the js. This prevents page flickering on refresh.-->        
         <script>
