--- a/output/topics/install/object_store_install_t.htm
+++ b/output/topics/install/object_store_install_t.htm
@@ -3,7 +3,7 @@
   PUBLIC "" "about:legacy-compat">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:whc="http://www.oxygenxml.com/webhelp/components" xml:lang="en-us" lang="en-us">
     <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><link rel="shortcut icon" href="../../iconAltair-32.png"><!----></link><link rel="icon" href="../../iconAltair-32.png"><!----></link>        
-      <meta name="copyright" content="(C) Copyright 2023" /><meta name="DC.rights.owner" content="(C) Copyright 2023" /><meta name="DC.Type" content="task" /><meta name="DC.Title" content="Install Object Store" /><meta name="abstract" content="This section provides the prerequisites, instructions to install Object Store, verification of Object Store installation, and Object Store service commands." /><meta name="description" content="This section provides the prerequisites, instructions to install Object Store, verification of Object Store installation, and Object Store service commands." /><meta name="DC.Relation" scheme="URI" content="../../topics/get_started/object_store_architecture_r.htm" /><meta name="DC.Relation" scheme="URI" content="../../topics/get_started/vs_code_integration_r.htm" /><meta name="prodname" content="Getting Started with Altair Object Store" /><meta name="version" content="2022.1.0" /><meta name="DC.Format" content="XHTML" /><meta name="DC.Identifier" content="task_ql5_png_m5b" /><title>Install Object Store</title><!--  Generated with Oxygen version 20.0-SNAPSHOT, build number 2018042310.  --><meta name="wh-path2root" content="../../" /><meta name="wh-toc-id" content="task_ql5_png_m5b-d46e508" />
+      <meta name="copyright" content="(C) Copyright 2024" /><meta name="DC.rights.owner" content="(C) Copyright 2024" /><meta name="DC.Type" content="task" /><meta name="DC.Title" content="Install Object Store" /><meta name="abstract" content="This section provides the prerequisites, instructions to install Object Store, verification of Object Store installation, and Object Store service commands." /><meta name="description" content="This section provides the prerequisites, instructions to install Object Store, verification of Object Store installation, and Object Store service commands." /><meta name="DC.Relation" scheme="URI" content="../../topics/get_started/object_store_architecture_r.htm" /><meta name="DC.Relation" scheme="URI" content="../../topics/get_started/vs_code_integration_r.htm" /><meta name="prodname" content="Getting Started with Altair Object Store" /><meta name="version" content="2022.1.0" /><meta name="DC.Format" content="XHTML" /><meta name="DC.Identifier" content="task_ql5_png_m5b" /><title>Install Object Store</title><!--  Generated with Oxygen version 20.0-SNAPSHOT, build number 2018042310.  --><meta name="wh-path2root" content="../../" /><meta name="wh-toc-id" content="task_ql5_png_m5b-d46e508" />
     	<!--ZOOMSTOP-->
         <link rel="preload" href="../../oxygen-webhelp/template/resources/images/unity_gradient_resized.png" as="image" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -50,7 +50,7 @@
         <!--ZOOMRESTART-->
     </head>
 
-    <body class="wh_topic_page dita_topic frmBody" id="task_ql5_png_m5b" data-target="#toc" data-spy="scroll">
+    <body class="wh_topic_page dita_topic frmBody" id="task_ql5_png_m5b" data-spy="scroll" data-target="#toc">
         <!-- Sets the current theme (light/dark) based on local storage. The script is placed here rather than
             at the end of the body tag with the rest of the js. This prevents page flickering on refresh.-->        
         <script>
@@ -326,7 +326,7 @@
 
             <section class="section context">
                 <ul class="ul" id="task_ksv_hr4_nvb__ul_dhl_nr4_nvb">
-                    <li class="li">Node.js 16 LTS</li>
+                    <li class="li">Node.js 18 LTS</li>
 
                     <li class="li">Python 3.8.10</li>
 
